Add Computer Software section and updated pdf.

--- a/The History of Memory & Storage.tex
+++ b/The History of Memory & Storage.tex
@@ -89,10 +89,13 @@ The more information and data that a computer holds, the longer it takes to find
 
 \section{COMPUTER SOFTWARE}
 
-Describe the software used for your chosen topic if any,
-and state any uses of the software that your topic had.
-If your topic does not have or use software, describe why it
-doesn't use software and how it functions without it.
+At a fundamental level a computer processes input data and output results. Software uses memory to store its data. There are two types of memory, the first is primary and other is secondary. The type of memory or storage that a software program used will depend on its needs.\\
+
+Primary memory is fast but is limited by cost and storage while secondary memory can store it much slower. 
+Programs use primary storage as a workspace to make fast changes to data. It might store variables, data structure, objects to be used late to be processed. 
+For example, let's say there is a list of unorganized names. In order to sort it alphabetically a program would need to be able to read the data quickly to be process and store it.\\
+
+\\Secondary memory is used to store long-term data when speed is a second priority. A program might use it for media files, source codes, and raw data. Let’s say a user is viewing a video on their computer. Since not a lot of processing is required, second memory is adequate.  
 
 \section{CONCLUSION}
 
