--- a/The History of Memory & Storage.tex
+++ b/The History of Memory & Storage.tex
@@ -89,35 +89,20 @@ The more information and data that a computer holds, the longer it takes to find
 
 \section{COMPUTER SOFTWARE}
 
-At a fundamental level a computer processes input data and output results. Software uses memory to store its data. There are two types of memory, the first is primary and other is secondary. The type of memory or storage that a software program used will depend on its needs.\\
+At a fundamental level, computers processes input data and output the result. Software uses memory storage to record its information. There are two main types of memory storage, the first is memory, and the second is storage. The internet holds a great wealth of information and software use database to store and organizes that information. The type of memory or storage that a software program used will depend on its needs.\\
 
-Primary memory is fast but is limited by cost and storage while secondary memory can store it much slower. 
-Programs use primary storage as a workspace to make fast changes to data. It might store variables, data structure, objects to be used late to be processed. 
-For example, let's say there is a list of unorganized names. In order to sort it alphabetically a program would need to be able to read the data quickly to be process and store it.\\
+Memory is fast but is limited by cost and capacity. Programs use memory as a workspace to make fast changes to data. It might store variables, data structure, objects to processing information. For example, let's say there is a list of unorganized names. In order to sort it alphabetically, a program would need to be able to read the data quickly to be able to process and store. Memory would be the best option in this situation due to its speed. \\
 
-\\Secondary memory is used to store long-term data when speed is a second priority. A program might use it for media files, source codes, and raw data. Let’s say a user is viewing a video on their computer. Since not a lot of processing is required, second memory is adequate.  
+Storage is used to store long-term data when speed is not a topmost priority. It is cheaper and has a larger capacity but is limited by speed. A program might use it to store media files, source codes, and raw data. Let’s say a user is viewing a video on their computer. Since playing back a video does require a lot of processing, using storage is the most adequate.\\
 
 \section{CONCLUSION}
 
-Conclude your research paper with any reflections on what you
-learned about your topic. Was this what you expected to find?
-Did you find any facts that surprised you? You may add other
-personal reflections about the topic here.
+Computer Memory storage technology has drastically changed year after year. Memory started out as an electrostatic memory tube that could barely store a few hundred bytes. Current memory storage technology has amazing abilities. It is a penny size microchip that is able to hold thousands of gigabytes and has a speed that has surpassed all previous memory generations. Technology innovates at an incredible speed. In 1981, Bill Gates said, “640K ought to be enough for anybody.” People back then could never imagine memory storage would become and it still holds true for today. Just imagine what memory storage technology would look like in the next few decades. Scientists are currently working on cutting-edge technology such as DNA and light. Memory storage would likely take on new forms and achieve speeds that never thought was possible. It will continue to improve beyond our wildest imagination.
 
 \section*{REFERENCES}
 
-Below are basic formats for different types of references.
-
 \begin{enumerate}[label={[\arabic*]}]
-\item Name of Author, ``Title of chapter in the book,''
-Title of The Published Book, xth edition. City of
-Publisher, Country if not U.S.
-\item Name of Author, “Name of paper,” Abbrev.
-Title of Periodical, vol. x, no. x, pp. xxx-xxx,
-Abbrev. Month, year.
-\item Name of Author, (Year, Month),
-Title of Internet Article [Online]. Available E-Mail:
-E-Mail.
+\item CHM Storage SIG, et al. “Memory &amp; Storage.” Computer History Museum, CHM , www.computerhistory.org/revolution/memory-storage/8. 
 \end{enumerate}
 
 \end{document}
